[project]
name = "qass-tools-analyzer"
version = "2.3.1"
authors = [
  { name="Nicklas Osmers", email="nosmers@qass.net" },
]
description = "Analyzer package for qass_tools"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "SQLAlchemy>=1.4.36",
    "tqdm>=4.64.0",
    "Deprecated>=1.2.13",
    "numpy>=1.19.5",
    "pandas>=1.1.5",
    "mysql-connector-python",
    "pymysql",
    # "PySide2", # This is omitted since it can destroy the configuration
]

[project.urls]
Homepage = "https://business.qass.net/en/qass-open-source"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"
