[metadata]
name = qass_tools_analyzer
version = 2.2
author = Nicklas Osmers
author_email = nosmers@qass.net
description = Analyzer package for qass_tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.qass.net/developers/qass_tools/qass_tools_analyzer
project_urls =
    Bug Tracker = https://git.qass.net/developers/qass_tools/qass_tools_analyzer/-/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
install_requires =
    SQLAlchemy >=1.4.36
    tqdm >=4.64.0
    Deprecated >=1.2.13
    mysql-connector-python

[options.packages.find]
where = src
